Adds third paper

--- a/_data/definitions.yaml
+++ b/_data/definitions.yaml
@@ -14,3 +14,11 @@
   title: Gamma
   def: "Gamma brain waves are a type of brainwave pattern that oscillate at approximately 25 to 100 Hz. Gamma waves are associated with states of heightened perception, problem-solving, and consciousness. Gamma waves play a crucial role in cognitive functioning, including memory, and information processing, and are thought to integrate thoughts and information from different parts of the brain."
   wiki: Gamma_wave
+- term: jhana
+  title: Jhana
+  def: "Jhana refers to states of deep concentration or meditative absorption in Buddhist practice, achieved through intense focus and mindfulness. These states represent progressive levels of mental and emotional calm, clarity, and bliss, cultivated through the practice of meditation, leading to profound insight and enlightenment."
+  wiki: Dhyāna_in_Buddhism
+- term: mbsr
+  title: MBSR
+  def: "Mindfulness-Based Stress Reduction (MBSR) is a program designed to help individuals cope with stress, pain, and illness. Developed by Jon Kabat-Zinn in the 1970s, it combines meditation and yoga to promote awareness and stress management. The eight-week program teaches participants to focus on the present moment non-judgmentally, enhancing their ability to manage difficulties."
+  wiki: Mindfulness-based_stress_reduction
