Mind wandering blog post

--- a/_data/definitions.yaml
+++ b/_data/definitions.yaml
@@ -2,6 +2,10 @@
   title: Brahmavihārās
   def: "Brahma Vihara meditation, also known as the Four Immeasurables, involves cultivating four qualities: loving-kindness (metta), compassion (karuna), empathetic joy (mudita), and equanimity (upekkha). It aims to develop a state of unconditional love, compassion towards suffering, joy in the happiness of others, and a balanced mind in all situations."
   wiki: Brahmavihara
+- term: dmn
+  title: DMN
+  def: "The default mode network (DMN) is a system of connected brain areas that show increased activity when a person is not focused on what is happening around them. such as during daydreaming and mind-wandering. It can also be active when the individual is thinking about others or themselves, remembering the past, and planning for the future."
+  wiki: Default_mode_network
 - term: eeg
   title: EEG
   def: An electroencephalogram (EEG) is a recording of brain activity. During this painless test, small sensors are attached to the scalp to pick up the electrical signals produced by the brain.
