--- a/_data/definitions.yaml
+++ b/_data/definitions.yaml
@@ -34,6 +34,10 @@
   title: MBSR
   def: "Mindfulness-Based Stress Reduction (MBSR) is a program designed to help individuals cope with stress, pain, and illness. Developed by Jon Kabat-Zinn in the 1970s, it combines meditation and yoga to promote awareness and stress management. The eight-week program teaches participants to focus on the present moment non-judgmentally, enhancing their ability to manage difficulties."
   wiki: Mindfulness-based_stress_reduction
+- term: randomized_controlled_trial
+  title: Randomized Controlled Trial
+  def: A Randomized Controlled Trial is a scientific study design that randomly assigns participants to either an experimental group receiving an intervention or a control group, allowing researchers to measure the true effect of the intervention while minimizing bias.
+  wiki: Randomized_controlled_trial
 - term: telomeres
   title: Telomeres
   def: "Telomeres are protective caps at the end of chromosomes that shorten with each cell division. Telomere length is associated with aging and health, with longer telomeres linked to better health and longevity. Stress and lifestyle factors can affect telomere length, making them a potential marker of health and aging."
