--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ paginate:	10
 menu_items:
   - title: Home
     url: /
+  - title: Research Themes
+    url: /themes/
   - title: About
     url: /about/
   - title: What Is Contemplative Neuroscience?
