--- a/_data/definitions.yaml
+++ b/_data/definitions.yaml
@@ -54,3 +54,7 @@
   title: Mindfulness
   def: "Mindfulness is the psychological process of purposely bringing one's attention to experiences occurring in the present moment without judgment. It involves maintaining awareness of thoughts, feelings, bodily sensations, and surrounding environment with an attitude of curiosity and acceptance. In meditation contexts, mindfulness practices typically involve focusing attention on the breath or body sensations as anchors to the present moment while acknowledging and releasing distracting thoughts."
   wiki: Mindfulness
+- term: beta
+  title: Beta
+  def: "Beta brain waves are a type of brainwave pattern that oscillate between approximately 12 to 30 Hz. Beta waves are typically associated with active thinking, focus, alertness, and engagement with the external world. They are prominent during conscious, goal-directed activity and are linked to cognitive tasks such as problem-solving, decision-making, and sustained attention."
+  wiki: Beta_wave
